--- a/src/css/activityItem.css
+++ b/src/css/activityItem.css
@@ -1,21 +1,24 @@
 .call-info {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(8, 1fr);
   padding: 8px 0px;
 }
 
 .direction {
   grid-column: 1 / 3;
+  display: flex;
+  align-items: center;
 }
 
 .detail {
-  grid-column: 3 / 7;
+  grid-column: 3 / 8;
 }
 
 .archive {
-  grid-column: 7;
+  grid-column: 8;
 }
 
 .date-and-type {
   display: flex;
+  padding-top: 2px;
 }
