--- a/src/css/button.css
+++ b/src/css/button.css
@@ -1,11 +1,17 @@
 button {
+  margin: 10px 0px;
   margin-left: 20px;
   padding: 7px 14px;
-  border: rgb(172, 172, 172) solid 1px;
+  border: rgb(226, 226, 226) solid 1px;
   border-radius: 5px;
   cursor: pointer;
   color: rgb(72, 72, 72);
   font-weight: bold;
+  background-color: white;
+}
+
+button:hover {
+  background-color: rgb(226, 226, 226);
 }
 
 button div {
